[gd_scene load_steps=8 format=3 uid="uid://c60ggc5ietvr"]

[ext_resource type="Script" uid="uid://b2bcy46r6abmw" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://3cksx67gjyps" path="res://pong_court.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://d0o48seu5c8ph" path="res://ball.tscn" id="3_1bvp3"]
[ext_resource type="Theme" uid="uid://ljrld2w6646" path="res://assets/ui_theme.tres" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://0jkffbhtvl64" path="res://player.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://c8k2b6jw44nyg" path="res://main_menu.gd" id="6_7mycd"]
[ext_resource type="Script" uid="uid://646snrlfqimg" path="res://game_over_menu.gd" id="7_272bh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")
max_score = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)

[node name="PongCourt" parent="." instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
position = Vector2(320, 180)

[node name="Ball" parent="." instance=ExtResource("3_1bvp3")]
unique_name_in_owner = true
position = Vector2(320, 181)

[node name="Player" parent="." node_paths=PackedStringArray("ball") instance=ExtResource("5_lquwl")]
unique_name_in_owner = true
position = Vector2(79, 170)
ball = NodePath("../Ball")

[node name="Player2" parent="." node_paths=PackedStringArray("ball", "oponent") instance=ExtResource("5_lquwl")]
unique_name_in_owner = true
position = Vector2(563, 170)
player = "2"
ball = NodePath("../Ball")
oponent = NodePath("../Player")

[node name="Player1Score" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 269.0
offset_top = 22.0
offset_right = 309.0
offset_bottom = 52.7292
size_flags_horizontal = 4
theme = ExtResource("5_7mycd")
text = "0"
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 336.0
offset_top = 24.0
offset_right = 376.0
offset_bottom = 54.7292
size_flags_horizontal = 4
theme = ExtResource("5_7mycd")
text = "0"
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_7mycd")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "PONG"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="BtnPlayervPlayer" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "Player vs Player"

[node name="BtnPlayervCPU" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "Player vs CPU"

[node name="GameOverMenu" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_272bh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameOverMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "Player # Won"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="BtnPlayAgain" type="Button" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "Play Again"

[node name="BtnMainMenu" type="Button" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_7mycd")
text = "Main Menu"
